增加任务盒子弹性动画效果，优化打卡记录显示，改进时间格式

--- a/pages/todo/index.wxml
+++ b/pages/todo/index.wxml
@@ -99,7 +99,7 @@
               </view>
               
               <!-- 任务打卡记录列表 -->
-              <view class="records-list" wx:if="{{getTaskCheckinRecords(expandedDay, item.title).length > 0 && isDayUnlocked(expandedDay)}}">
+              <view class="records-list" wx:if="{{getTaskCheckinRecords(expandedDay, item.title).length > 0 && (isDayUnlocked(expandedDay) || expandedDay === 1)}}">
                 <view 
                   wx:for="{{getTaskCheckinRecords(expandedDay, item.title)}}" 
                   wx:for-item="record"
